--- a/EIA/TEV_Script_Final_Tim_Dev_9_17.ipynb
+++ b/EIA/TEV_Script_Final_Tim_Dev_9_17.ipynb
@@ -553,11 +553,12 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "#using llp only subset AOIS\n",
+        "## using 2019\n",
         "# Extended table with pvc_per_acre columns\n",
         "data = {\n",
         "    \"Source\": [\"EIA_CS1\", \"EIA_CS2\", \"EIA_CS3\", \"EIA_CS1\", \"EIA_CS2\", \"EIA_CS3\"],\n",
-        "    \"agb_per_acre\": [81.444949, 80.442362, 68.891332, 68.10817448194344, 64.82176787395615, 46,05036319912035],\n",
-        "    \"std_agb_per_acre\": [1.060591, 1.229071, 1.160256, 3.700580323769768, 3.299237736615662, 0.13889467954294735],\n",
+        "    \"agb_per_acre\": [81.444949, 80.442362, 68.891332, 63.548991, 66.625529, 46.050363],\n",
+        "    \"std_agb_per_acre\": [1.060591, 1.229071, 1.160256, 0.102185, 0.061093, \t0.138895],\n",
         "    \"pvc_per_acre_mean\": [10, 11, 12, -2253.80, 14, 15],\n",
         "    \"pvc_per_acre_std\": [5, 6, 7, 94.70, 9, 10],\n",
         "    \"Method\": [\"OBIWAN\", \"OBIWAN\", \"OBIWAN\", \"ESA\", \"ESA\", \"ESA\"]\n",
